@@ -70,6 +70,7 @@ Alien::pkgconf                                 = 0.16
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.06
 Alien::unzip                                   = 0.03
+Alien::wasmtime                                = 0.07
 Alien::xz                                      = 0.06
 ;Alt::Alien::cmake::System                     = 0.0402
 ;Alt::Alien::FFI::System                       = 0.21
@@ -113,7 +114,7 @@ Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
 FFI::CheckLib                                  = 0.26
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 1.10
+FFI::Platypus                                  = 1.11
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.10
@@ -161,6 +162,7 @@ Test2::Tools::URL                              = 0.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
+Wasm                                           = 0.05
 WebService::DailyConnect                       = 0.02
 WebService::LiveJournal                        = 0.08
 Win32::ErrorMode                               = 0.06
